<resources>
    <string name="app_name">FitKitchen</string>
    <string name="facebook_app_id">354950348220055</string>

    <!--Hint-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>

    <!--Button and TextView text-->
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log In</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google+</string>
    <string name="forgot_pass_btn">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="reviews">Reviews</string>
    <string name="logout">Logout</string>
    <string name="add_extras">Add Extras</string>
    <string name="proceed">Proceed</string>
    <string name="plan">Meal Plan</string>
    <string name="extras">Extras</string>
    <string name="cart">Cart</string>
    <string name="apply">Apply</string>
    <string name="total">Total Rs.:-</string>

    <!--Link text-->
    <string name="forgot_password">Forgot Password ?</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="already_have_an_account">Already have an account ?</string>


    <!--Validation text-->
    <string name="please_enter_your_name">Please enter your Name</string>
    <string name="please_enter_your_phone_no">Please enter your Phone no.</string>
    <string name="please_enter_valid_phone_no">Please enter valid Phone no.</string>
    <string name="please_enter_your_email_phone">Please enter your Email or Phone</string>
    <string name="please_enter_your_email_id">Please enter your Email id</string>
    <string name="please_enter_valid_email_address">Please enter valid Email id</string>
    <string name="please_enter_password">Please enter your Password</string>
    <string name="password_should_be_6_character_in_length">Password should be 6 character in length</string>
    <string name="password_is_too_long">Password is too long</string>
    <string name="password_should_contain">Password should contain at least(1 character,1 number and 1 symbol)</string>
    <string name="connection_failed">Connction Failed...</string>
    <string name="success">Success...</string>
    <string name="failed">Failed...</string>
    <string name="new_user_created">New user created successfully...</string>
    <string name="please_enter_valid_details">Please enter valid details</string>
    <string name="please_enter_old_password">Please enter old password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_confirm_the_password">Please confirm the password</string>
    <string name="reset_password_link_send_on_email">Reset Password link has been sent to your email..</string>
    <string name="reset_password_successfully">Reset password successfully...</string>
    <string name="meal_plan_not_available">Meal plan not available</string>

    <!--toolbar heading-->
    <string name="user_profile">Profile</string>
    <string name="user_update_profile">Update Profile</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>Home</item>
        <item>Profile</item>
    </string-array>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_settings">Settings</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--Pytm strings-->
    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">0.01</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail</string>
    <string name="sample_website">worldpressplg</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
</resources>
