<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/changePassActivity_RL">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Background image-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_image"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/layout_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/food_picky_logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="@dimen/layout_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <!--old password edittext-->
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/old_pass_edt"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/old_pass"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edt_padditng"/>

                <!--new password edittext-->
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_pass_edt"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/new_pass"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edt_padditng"/>

                <!--confirm password edittext-->
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/confirm_pass_edt"
                    android:background="@drawable/custom_edittext"
                    android:hint="@string/confirm_pass"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/edt_padditng"/>

                <!--change password button-->
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/change_pass_btn"
                    android:text="@string/change_password"
                    android:background="@drawable/custom_button"
                    android:textColor="@color/colorWhite"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="2dp"/>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

</RelativeLayout>